More style changes, a couple added <br>s to fix basic html spacing issues. still fiddling with new css classes.

--- a/bookEx/bookEx/static/base.css
+++ b/bookEx/bookEx/static/base.css
@@ -82,7 +82,7 @@ color: #192d15;
 
 .content h1 {
 color: #192d15;
-font-weight: bold;
+/*font-weight: bold;*/
 }
 
 .content p {
@@ -98,6 +98,10 @@ color: white;
 input[type=text] {
   border: 2px solid #198754;
   border-radius: 4px;
+}
+
+.card-title {
+font-weight: bold;
 }
 
 /* Footer */
@@ -122,7 +126,7 @@ body.dark-mode .sidebar {
 background-color: #121612 !important;
 }
 body.dark-mode a.nav-link {
-color: #e0e0e0 !important;
+color: #ffffff !important;
 }
 
 body.dark-mode .nav-item :hover {
@@ -228,9 +232,10 @@ body.dark-mode #top-bar .nav-link:hover { background-color: rgba(255,255,255,0.1
 body:not(.dark-mode) .container,
 body:not(.dark-mode) .container-fluid { background-color: #fff !important; color: #000 !important; }
 body.dark-mode .container,
-body.dark-mode .container-fluid { background-image: linear-gradient(#2c2e2c, #000) !important; color: #e0e0e0 !important; }
+body.dark-mode .container-fluid { background-image: linear-gradient(#2c2e2c, #060606) !important; color: #e0e0e0 !important; }
 
-body.dark-mode .test{ background-image: none !important; background-color: #121612 !important; color: #e0e0e0 !important; }
+body.dark-mode .test{ background-image: none !important; background-color: #ffffff14 !important; color: #ffffff !important; }
+body.dark-mode .clear-cont{ background-image: none !important; background-color: #ffffff00 !important; color: #ffffff !important; }
 
 /* 5/6 – remove border/outline from the Rainforest link */
 #top-bar > a.nav-link {
